-
Bug
-
Resolution: Done
-
P1: Critical
-
5.9.0 Beta 3
-
ae0b101884b05355e3a7bc06dbca722ad3d08d0f (qtremoteobjects/5.9.0, 16.5.2017, 5.9.0)
Q_REMOTEOBJECTS_EXPORT macro is missing in some of the remote objects module's .h files. This produces the following linker errors:
main.obj : error LNK2019: unresolved external symbol "public: static class QtROServerFactory * __cdecl QtROServerFactory::instance(void)" (?instance@QtROServerFactory@@SAPEAV1@XZ) referenced in function "void __cdecl qRegisterRemoteObjectsServer<class SslServerImpl>(class QString const &)" (??$qRegisterRemoteObjectsServer@VSslServerImpl@@@@YAXAEBVQString@@@Z) sslclientio.obj : error LNK2019: unresolved external symbol "public: __cdecl ClientIoDevice::ClientIoDevice(class QObject *)" (??0ClientIoDevice@@QEAA@PEAVQObject@@@Z) referenced in function "public: __cdecl SslClientIo::SslClientIo(class QObject *)" (??0SslClientIo@@QEAA@PEAVQObject@@@Z) sslclientio.obj : error LNK2019: unresolved external symbol "public: virtual __cdecl ClientIoDevice::~ClientIoDevice(void)" (??1ClientIoDevice@@UEAA@XZ) referenced in function "public: virtual __cdecl SslClientIo::~SslClientIo(void)" (??1SslClientIo@@UEAA@XZ) sslclientio.obj : error LNK2001: unresolved external symbol "public: virtual void __cdecl ClientIoDevice::write(class QByteArray const &)" (?write@ClientIoDevice@@UEAAXAEBVQByteArray@@@Z) sslclientio.obj : error LNK2001: unresolved external symbol "public: virtual void __cdecl ClientIoDevice::write(class QByteArray const &,__int64)" (?write@ClientIoDevice@@UEAAXAEBVQByteArray@@_J@Z) sslclientio.obj : error LNK2019: unresolved external symbol "public: void __cdecl ClientIoDevice::close(void)" (?close@ClientIoDevice@@QEAAXXZ) referenced in function "public: virtual __cdecl SslClientIo::~SslClientIo(void)" (??1SslClientIo@@UEAA@XZ) sslclientio.obj : error LNK2001: unresolved external symbol "public: virtual __int64 __cdecl ClientIoDevice::bytesAvailable(void)" (?bytesAvailable@ClientIoDevice@@UEAA_JXZ) sslclientio.obj : error LNK2019: unresolved external symbol "public: class QUrl __cdecl ClientIoDevice::url(void)const " (?url@ClientIoDevice@@QEBA?AVQUrl@@XZ) referenced in function "public: virtual void __cdecl SslClientIo::connectToServer(void)" (?connectToServer@SslClientIo@@UEAAXXZ) sslclientio.obj : error LNK2019: unresolved external symbol "public: void __cdecl ClientIoDevice::readyRead(void)" (?readyRead@ClientIoDevice@@QEAAXXZ) referenced in function "public: __cdecl SslClientIo::SslClientIo(class QObject *)" (??0SslClientIo@@QEAA@PEAVQObject@@@Z) sslclientio.obj : error LNK2019: unresolved external symbol "public: void __cdecl ClientIoDevice::shouldReconnect(class ClientIoDevice *)" (?shouldReconnect@ClientIoDevice@@QEAAXPEAV1@@Z) referenced in function "public: void __cdecl SslClientIo::onError(enum QAbstractSocket::SocketError)" (?onError@SslClientIo@@QEAAXW4SocketError@QAbstractSocket@@@Z) sslserverio.obj : error LNK2019: unresolved external symbol "public: __cdecl ServerIoDevice::ServerIoDevice(class QObject *)" (??0ServerIoDevice@@QEAA@PEAVQObject@@@Z) referenced in function "public: __cdecl SslServerIo::SslServerIo(class QSslSocket *,class QObject *)" (??0SslServerIo@@QEAA@PEAVQSslSocket@@PEAVQObject@@@Z) sslserverio.obj : error LNK2019: unresolved external symbol "public: virtual __cdecl ServerIoDevice::~ServerIoDevice(void)" (??1ServerIoDevice@@UEAA@XZ) referenced in function "int `public: __cdecl SslServerIo::SslServerIo(class QSslSocket *,class QObject *)'::`1'::dtor$0" (?dtor$0@?0???0SslServerIo@@QEAA@PEAVQSslSocket@@PEAVQObject@@@Z@4HA) sslserverio.obj : error LNK2001: unresolved external symbol "public: virtual void __cdecl ServerIoDevice::write(class QByteArray const &)" (?write@ServerIoDevice@@UEAAXAEBVQByteArray@@@Z) sslserverio.obj : error LNK2001: unresolved external symbol "public: virtual void __cdecl ServerIoDevice::write(class QByteArray const &,__int64)" (?write@ServerIoDevice@@UEAAXAEBVQByteArray@@_J@Z) sslserverio.obj : error LNK2001: unresolved external symbol "public: virtual __int64 __cdecl ServerIoDevice::bytesAvailable(void)" (?bytesAvailable@ServerIoDevice@@UEAA_JXZ) sslserverio.obj : error LNK2019: unresolved external symbol "public: void __cdecl ServerIoDevice::disconnected(void)" (?disconnected@ServerIoDevice@@QEAAXXZ) referenced in function "public: __cdecl SslServerIo::SslServerIo(class QSslSocket *,class QObject *)" (??0SslServerIo@@QEAA@PEAVQSslSocket@@PEAVQObject@@@Z) sslserverio.obj : error LNK2019: unresolved external symbol "public: void __cdecl ServerIoDevice::readyRead(void)" (?readyRead@ServerIoDevice@@QEAAXXZ) referenced in function "public: __cdecl SslServerIo::SslServerIo(class QSslSocket *,class QObject *)" (??0SslServerIo@@QEAA@PEAVQSslSocket@@PEAVQObject@@@Z) sslserverimpl.obj : error LNK2019: unresolved external symbol "public: __cdecl QConnectionAbstractServer::QConnectionAbstractServer(class QObject *)" (??0QConnectionAbstractServer@@QEAA@PEAVQObject@@@Z) referenced in function "public: __cdecl SslServerImpl::SslServerImpl(class QObject *)" (??0SslServerImpl@@QEAA@PEAVQObject@@@Z) sslserverimpl.obj : error LNK2019: unresolved external symbol "public: virtual __cdecl QConnectionAbstractServer::~QConnectionAbstractServer(void)" (??1QConnectionAbstractServer@@UEAA@XZ) referenced in function "public: virtual __cdecl SslServerImpl::~SslServerImpl(void)" (??1SslServerImpl@@UEAA@XZ) sslserverimpl.obj : error LNK2019: unresolved external symbol "public: void __cdecl QConnectionAbstractServer::newConnection(void)" (?newConnection@QConnectionAbstractServer@@QEAAXXZ) referenced in function "public: __cdecl SslServerImpl::SslServerImpl(class QObject *)" (??0SslServerImpl@@QEAA@PEAVQObject@@@Z) moc_sslclientio.obj : error LNK2001: unresolved external symbol "public: static struct QMetaObject const ClientIoDevice::staticMetaObject" (?staticMetaObject@ClientIoDevice@@2UQMetaObject@@B) moc_sslclientio.obj : error LNK2019: unresolved external symbol "public: virtual void * __cdecl ClientIoDevice::qt_metacast(char const *)" (?qt_metacast@ClientIoDevice@@UEAAPEAXPEBD@Z) referenced in function "public: virtual void * __cdecl SslClientIo::qt_metacast(char const *)" (?qt_metacast@SslClientIo@@UEAAPEAXPEBD@Z) moc_sslclientio.obj : error LNK2019: unresolved external symbol "public: virtual int __cdecl ClientIoDevice::qt_metacall(enum QMetaObject::Call,int,void * *)" (?qt_metacall@ClientIoDevice@@UEAAHW4Call@QMetaObject@@HPEAPEAX@Z) referenced in function "public: virtual int __cdecl SslClientIo::qt_metacall(enum QMetaObject::Call,int,void * *)" (?qt_metacall@SslClientIo@@UEAAHW4Call@QMetaObject@@HPEAPEAX@Z) moc_sslserverio.obj : error LNK2001: unresolved external symbol "public: static struct QMetaObject const ServerIoDevice::staticMetaObject" (?staticMetaObject@ServerIoDevice@@2UQMetaObject@@B) moc_sslserverio.obj : error LNK2019: unresolved external symbol "public: virtual void * __cdecl ServerIoDevice::qt_metacast(char const *)" (?qt_metacast@ServerIoDevice@@UEAAPEAXPEBD@Z) referenced in function "public: virtual void * __cdecl SslServerIo::qt_metacast(char const *)" (?qt_metacast@SslServerIo@@UEAAPEAXPEBD@Z) moc_sslserverio.obj : error LNK2019: unresolved external symbol "public: virtual int __cdecl ServerIoDevice::qt_metacall(enum QMetaObject::Call,int,void * *)" (?qt_metacall@ServerIoDevice@@UEAAHW4Call@QMetaObject@@HPEAPEAX@Z) referenced in function "public: virtual int __cdecl SslServerIo::qt_metacall(enum QMetaObject::Call,int,void * *)" (?qt_metacall@SslServerIo@@UEAAHW4Call@QMetaObject@@HPEAPEAX@Z) moc_sslserverimpl.obj : error LNK2001: unresolved external symbol "public: static struct QMetaObject const QConnectionAbstractServer::staticMetaObject" (?staticMetaObject@QConnectionAbstractServer@@2UQMetaObject@@B) moc_sslserverimpl.obj : error LNK2019: unresolved external symbol "public: virtual void * __cdecl QConnectionAbstractServer::qt_metacast(char const *)" (?qt_metacast@QConnectionAbstractServer@@UEAAPEAXPEBD@Z) referenced in function "public: virtual void * __cdecl SslServerImpl::qt_metacast(char const *)" (?qt_metacast@SslServerImpl@@UEAAPEAXPEBD@Z) moc_sslserverimpl.obj : error LNK2019: unresolved external symbol "public: virtual int __cdecl QConnectionAbstractServer::qt_metacall(enum QMetaObject::Call,int,void * *)" (?qt_metacall@QConnectionAbstractServer@@UEAAHW4Call@QMetaObject@@HPEAPEAX@Z) referenced in function "public: virtual int __cdecl SslServerImpl::qt_metacall(enum QMetaObject::Call,int,void * *)" (?qt_metacall@SslServerImpl@@UEAAHW4Call@QMetaObject@@HPEAPEAX@Z) debug\Server.exe : fatal error LNK1120: 29 unresolved externals
For Gerrit Dashboard: QTBUG-60624 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
194677,3 | Export instance methods of QtROServerFactory and QtROClientFactory | 5.9.0 | qt/qtremoteobjects | Status: MERGED | +2 | 0 |
196997,3 | Export classes needed for custom backends | 5.9 | qt/qtremoteobjects | Status: MERGED | +2 | 0 |