Export instance methods of QtROServerFactory and QtROClientFactory

Task-number: QTBUG-60624
Change-Id: Icfb14a476572667b9617099dccfdd13a15605034
Reviewed-by: Brett Stottlemyer <bstottle@ford.com>
Reviewed-by: Marc Mutz <marc.mutz@kdab.com>